--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <header>
         <h1>This is a header</h1>
-        <p>This is a paragraph. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel adipisci aliquam tempora
-            doloribus tempore commodi excepturi nam. Nobis, beatae quibusdam, maiores repellat, porro saepe enim
+        <p>This is a paragraph. Lorem, ipsum dolor sit amet 
+            consectetur adipisicing elit. Vel adipisci aliquam tempora
+            doloribus tempore commodi excepturi nam. Nobis, 
+            beatae quibusdam, maiores repellat, porro saepe enim
             architecto fugiat accusantium vero totam.</p>
     </header>
     <table>
@@ -41,13 +43,19 @@
     <img src="husky.jpg" alt="husky">
 
     <p class="first-para">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus aut perspiciatis saepe atque! Dolorem cumque incidunt fugit quae maxime dolore, nemo deleniti illo laudantium natus ut consequatur molestiae quasi exercitationem.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Delectus aut perspiciatis saepe atque! Dolorem cumque incidunt fugit quae maxime dolore, 
+        nemo deleniti illo laudantium natus ut consequatur molestiae quasi exercitationem.
     </p>
     <p class="second-para">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, iure soluta? Accusamus quas tempora molestiae. Architecto id, corporis, temporibus voluptatibus cum provident explicabo illo tempora at unde sunt quidem distinctio.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, iure soluta? 
+        Accusamus quas tempora molestiae. Architecto id, corporis, temporibus voluptatibus 
+        cum provident explicabo illo tempora at unde sunt quidem distinctio.
     </p>
     <p class="third-para">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam provident, unde dolor in nulla accusamus quisquam voluptatum nemo aperiam quae reiciendis odio reprehenderit recusandae officia iusto ipsum laudantium rem? Accusamus.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam provident, 
+        unde dolor in nulla accusamus quisquam voluptatum nemo aperiam 
+        quae reiciendis odio reprehenderit recusandae officia iusto ipsum laudantium rem? Accusamus.
     </p>
 </body>
 
